--- a/package.json
+++ b/package.json
@@ -1,14 +1,51 @@
 {
-  "name": "shopping-cart-promos-challenge",
-  "version": "1.0.0",
-  "description": "Shopping Cart With Promotions",
-  "main": "src/main.ts",
-  "author": "Hugo Gouveia",
-  "license": "MIT",
-  "private": true,
-  "engines": {
-    "node": ">=16.18.0",
-    "npm": "please-use-yarn",
-    "yarn": ">=1.22.0"
-  }
+	"name": "shopping-cart-promos-challenge",
+	"version": "1.0.0",
+	"description": "Shopping Cart With Promotions",
+	"main": "src/main.ts",
+	"author": "Hugo Gouveia",
+	"license": "MIT",
+	"private": true,
+	"engines": {
+		"node": ">=16.18.0",
+		"npm": "please-use-yarn",
+		"yarn": ">=1.22.0"
+	},
+	"scripts": {
+		"prepare": "husky install",
+		"prebuild": "rimraf dist",
+		"build": "tsc --project tsconfig.build.json",
+		"start": "PROJECT_ENV=dev nodemon src/main.ts",
+		"start:dev": "PROJECT_ENV=dev nodemon src/main.ts",
+		"lint": "eslint . --fix",
+		"lint:ci": "eslint .",
+		"format": "prettier --write .",
+		"format:ci": "prettier --check .",
+		"style": "yarn format && yarn lint",
+		"style:ci": "yarn format:ci && yarn lint:ci",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.1.2",
+		"@commitlint/config-conventional": "^17.1.0",
+		"@commitlint/types": "^17.0.0",
+		"@types/jest": "^29.2.0",
+		"@types/node": "^18.11.2",
+		"@typescript-eslint/eslint-plugin": "^5.40.1",
+		"@typescript-eslint/parser": "^5.40.1",
+		"eslint": "^8.25.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"husky": "^8.0.1",
+		"jest": "^29.2.1",
+		"nodemon": "^2.0.20",
+		"prettier": "^2.7.1",
+		"ts-jest": "^29.0.3"
+	},
+	"dependencies": {
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.4"
+	}
 }
