--- a/package.json
+++ b/package.json
@@ -27,6 +27,34 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage"
 	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".*\\.test\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageThreshold": {
+			"global": {
+				"branches": 90,
+				"functions": 90,
+				"lines": 80,
+				"statements": -20
+			}
+		},
+		"coverageDirectory": "../coverage/tests",
+		"testEnvironment": "node",
+		"moduleNameMapper": {
+			"src/(.*)": "<rootDir>/../src/$1"
+		}
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
