--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
 		"jest": "^29.2.1",
 		"nodemon": "^2.0.20",
 		"prettier": "^2.7.1",
-		"ts-jest": "^29.0.3"
+		"ts-jest": "^29.0.3",
+		"ts-mockito": "^2.6.1"
 	},
 	"dependencies": {
 		"ts-node": "^10.9.1",
